--- a/index.html
+++ b/index.html
@@ -4,10 +4,203 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Alm brand</title>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <style>
+        :root {
+            --lyseblaa: #00b9ea;
+            --moerkeblaa: #032846;
+            --roed: #e51147;
+            --gul: #fcd900;
+            --lyseblaa-baggrund: rgba(0, 185, 234, 0.1);
+            --almbrandlys: #ebf6fc;
+            --almbrandmid: #d5edfa;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: 'Work Sans', sans-serif;
+        }
+
+        html {
+            height: 100%;
+        }
+
+        /*Nav*/
+        .logo_container img {
+            max-width: 70px;
+            margin: 6px 0;
+            margin-left: 6px;
+        }
+
+        /*INDHOLD*/
+        body {
+            min-height: 100%;
+            display: grid;
+            grid-template-rows: 1fr auto;
+        }
+
+
+
+        .bokse {
+            display: grid;
+            grid-template-rows: 1fr auto;
+        }
+
+        .boks {
+            grid-row: span 1;
+            margin: 6px;
+            line-height: 1.6;
+            color: var(--moerkeblaa);
+            text-align: center;
+        }
+
+        .boks1 {
+            background: var(--almbrandlys);
+        }
+
+        .boks2 {
+            background: var(--almbrandmid);
+        }
+
+        .boks3 {
+            background: var(--moerkeblaa);
+            color: white;
+        }
+
+        .boks4 {
+            background: var(--almbrandlys);
+        }
+
+        .headset {
+            margin: 10px 0 0 0;
+            max-height: 40px;
+        }
+
+
+        .boksheader {
+            font-size: 0.9em;
+            margin: 10px auto;
+            text-transform: uppercase;
+            font-weight: 500;
+        }
+
+        .boksemne {
+            font-size: 1.7em;
+            font-family: Georgia, serif;
+        }
+
+        .boksA {
+            max-width: 470px;
+            margin: 0 auto;
+            padding: 5px 15px;
+        }
+
+        .divider {
+            border: none;
+            width: 60px;
+            height: 2px;
+            margin: 10px auto;
+            background: var(--lyseblaa);
+        }
+
+        .boksButton {
+            border: 2px solid var(--lyseblaa);
+            background-color: transparent;
+            color: var(--moerkeblaa);
+            border-radius: 2em;
+            height: 40px;
+            min-width: 125px;
+            padding: 0 30px;
+            font-size: 16px;
+        }
+
+        .kontaktlink {
+            margin: 30px 0px;
+        }
+
+        .boks3 button {
+            color: #FFF;
+        }
+
+        .button_container {
+            margin: 13px 0 17px 0;
+        }
+
+        .tlf {
+            font-family: Georgia, serif;
+            font-size: 2em;
+        }
+
+        footer img {
+            max-width: 40px;
+            margin: 20px 5px;
+        }
+
+        footer {
+            display: flex;
+            justify-content: center;
+            background-color: var(--moerkeblaa);
+        }
+
+    </style>
 </head>
 
 <body>
+    <nav class="navigation">
+        <div class="logo_container">
+            <img src="Alm%20Brand_RGB.jpg" alt="" class="logo">
+        </div>
+        <div class="menu"></div>
+    </nav>
+    <main id="indhold">
+        <div class="bokse">
+            <div class="boks boks1">
+                <h1 class="boksheader"></h1>
+                <h2 class="boksemne"></h2>
+                <div class="divider"></div>
+                <p class="boksA"></p>
+                <div class="button_container">
+                    <button class="boksButton"></button>
+                </div>
+            </div>
+            <div class="boks boks2">
+                <h1 class="boksheader"></h1>
+                <h2 class="boksemne"></h2>
+                <div class="divider"></div>
+                <p class="boksA"></p>
+                <div class="button_container">
+                    <button class="boksButton"></button>
+                </div>
+            </div>
+        </div>
+        <div class="boks boks3">
+            <h1 class="boksheader"></h1>
+            <h2 class="boksemne"></h2>
+            <div class="divider"></div>
+            <p class="boksA">Hvor mange uforudsigelige udgifter har du?</p>
+            <div class="button_container">
+                <!--knap til underside med videoer-->
+                <button class="boksButton"><a href="video.html" target="_blank"> Video </a> </button>
+            </div>
+        </div>
+        <div class="boks boks4">
+            <h1 class="boksheader"></h1>
+            <h2 class="boksemne"></h2>
+            <div class="divider"></div>
+            <div class="boksA">
+                <h2 class="tlf">35 47 47 47</h2>
+                <br>
+                <p class="kontakt_tekst">Vi sidder klar til at hjælpe dig med at besvare dine spørgsmål.</p>
+                <div class="kontaktlink">
+                    <a href="https://www.almbrand.dk/kundeservice/kontakt/kontakt-os/" target="_blank">Kontakt os</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
 
 </body>
 
