--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             margin-left: 6px;
         }
 
+        .velkommen {
+            font-family: Georgia, serif;
+            font-size: 1.5em;
+            color: white;
+            text-align: center;
+        }
+
         /*INDHOLD*/
         body {
             min-height: 100%;
@@ -41,7 +48,10 @@
             grid-template-rows: 1fr auto;
         }
 
-
+        img {
+            max-width: 100%;
+            margin: 20px 5px;
+        }
 
         .bokse {
             display: grid;
@@ -152,28 +162,37 @@
         <div class="logo_container">
             <img src="Alm%20Brand_RGB.jpg" alt="" class="logo">
         </div>
+        <div class="velkommen">
+            <p style="background-image: url(almbrandd%C3%B8r.jpg)">Velkommen til Alm Brand Bank.<br>Har du også oplevet at skulle akut til tandlægen?<br>Eller måske kun kave et par dage til at betale indskud til lejlighed?<br>Vi kan hjælpe med vejledning inden du binder dig til at lån.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Inventore aperiam, necessitatibus eligendi qui tempore<br> voluptatum excepturi aspernatur reiciendis aliquid corrupti suscipit<br> velit quia molestias quae molestiae sed eveniet error culpa.</p>
+        </div>
         <div class="menu"></div>
     </nav>
     <main id="indhold">
         <div class="bokse">
             <div class="boks boks1">
                 <h1 class="boksheader"></h1>
-                <h2 class="boksemne"></h2>
+                <h2 class="boksemne">Ung+</h2>
                 <div class="divider"></div>
-                <p class="boksA"></p>
+                <p class="boksA">Vil du vide mere om Ung+? Læs videre her.</p>
                 <div class="button_container">
-                    <button class="boksButton"></button>
+                    <button class="boksButton"><a href="https://www.almbrand.dk/produkter/familie-og-fritid/ung-oekonomi/" target="_blank">Læs mere</a></button>
                 </div>
+            </div>
+            <div class="baggrund1">
+                <img src="1skille.jpg" alt="skille">
             </div>
             <div class="boks boks2">
                 <h1 class="boksheader"></h1>
-                <h2 class="boksemne"></h2>
-                <div class="divider"></div>
+                <h2 class="boksemne">Facebook og instragram</h2>
+                <div class="divider">Mød os</div>
                 <p class="boksA"></p>
                 <div class="button_container">
-                    <button class="boksButton"></button>
+                    <button class="boksButton"><a href="https://m.facebook.com/Alm-Brand-gruppe-7-267172407472254/" target="_blank">facebook</a> </button>
                 </div>
             </div>
+        </div>
+        <div class="baggrund2">
+            <img src="socialemedier.png" alt="skille">
         </div>
         <div class="boks boks3">
             <h1 class="boksheader"></h1>
@@ -184,6 +203,9 @@
                 <!--knap til underside med videoer-->
                 <button class="boksButton"><a href="video.html" target="_blank"> Video </a> </button>
             </div>
+        </div>
+        <div class="baggrund1">
+            <img src="2skille.jpg" alt="skille">
         </div>
         <div class="boks boks4">
             <h1 class="boksheader"></h1>
@@ -200,6 +222,24 @@
         </div>
     </main>
 
+    <footer>
+        <div class="socials">
+            <a href="https://www.facebook.com/almbrand" target="_blank">
+                <img src="facebook_logo.svg" alt="Facebook logo">
+            </a>
+        </div>
+        <div class="socials">
+            <a href="https://twitter.com/alm_brand" target="_blank">
+                <img src="twitter_logo.svg" alt="Twitter logo">
+            </a>
+        </div>
+        <div class="socials">
+            <a href="https://www.linkedin.com/company/alm-brand/" target="_blank">
+                <img src="linkdin_logo.svg" alt="Twitter logo">
+            </a>
+        </div>
+
+    </footer>
 
 
 </body>
