--- a/video.html
+++ b/video.html
@@ -48,6 +48,17 @@
         .boks3 {
             background-color: #00b9ea;
         }
+
+        footer img {
+            max-width: 40px;
+            margin: 20px 5px;
+        }
+
+        footer {
+            display: flex;
+            justify-content: center;
+            background-color: #032846;
+        }
     </style>
 </head>
 
@@ -78,6 +89,25 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="socials">
+            <a href="https://www.facebook.com/almbrand" target="_blank">
+                <img src="facebook_logo.svg" alt="Facebook logo">
+            </a>
+        </div>
+        <div class="socials">
+            <a href="https://twitter.com/alm_brand" target="_blank">
+                <img src="twitter_logo.svg" alt="Twitter logo">
+            </a>
+        </div>
+        <div class="socials">
+            <a href="https://www.linkedin.com/company/alm-brand/" target="_blank">
+                <img src="linkdin_logo.svg" alt="Twitter logo">
+            </a>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
