mangler kun videoer

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
             background-color: var(--moerkeblaa);
         }
 
+        .knap3 {
+            max-width: 70px;
+        }
     </style>
 </head>
 
@@ -198,10 +201,10 @@
             <h1 class="boksheader"></h1>
             <h2 class="boksemne"></h2>
             <div class="divider"></div>
-            <p class="boksA">Hvor mange uforudsigelige udgifter har du?</p>
+            <p class="boksA">Hvor mange uforudsete udgifter har du?</p>
             <div class="button_container">
                 <!--knap til underside med videoer-->
-                <button class="boksButton"><a href="video.html" target="_blank"> Video </a> </button>
+                <a href="video.html" target="_blank"> <img class="knap3" src="play_knap.svg" alt=""> </a>
             </div>
         </div>
         <div class="baggrund1">
