rigtig farve knap

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <p class="boksA">Hvor mange uforudsete udgifter har du?</p>
             <div class="button_container">
                 <!--knap til underside med videoer-->
-                <a href="video.html" target="_blank"> <img class="knap3" src="play_knap.svg" alt=""> </a>
+                <a href="video.html" target="_blank"> <img class="knap3" src="play_blue.svg" alt=""> </a>
             </div>
         </div>
         <div class="baggrund1">
