--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <img src="Alm%20Brand_RGB.jpg" alt="" class="logo">
         </div>
         <div class="velkommen">
-            <p style="background-image: url(almbrandd%C3%B8r.jpg)">Velkommen til Alm Brand Bank.<br>Har du også oplevet at skulle akut til tandlægen?<br>Eller måske kun kave et par dage til at betale indskud til lejlighed?<br>Vi kan hjælpe med vejledning inden du binder dig til at lån.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Inventore aperiam, necessitatibus eligendi qui tempore<br> voluptatum excepturi aspernatur reiciendis aliquid corrupti suscipit<br> velit quia molestias quae molestiae sed eveniet error culpa.</p>
+            <p style="background-image: url(topbillede.jpg)">Velkommen til Alm Brand Bank.<br>Har du også oplevet at skulle akut til tandlægen?<br>Eller måske kun kave et par dage til at betale indskud til lejlighed?<br>Vi kan hjælpe med vejledning inden du binder dig til at lån.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Inventore aperiam, necessitatibus eligendi qui tempore<br> voluptatum excepturi aspernatur reiciendis aliquid corrupti suscipit<br> velit quia molestias quae molestiae sed eveniet error culpa.</p>
         </div>
         <div class="menu"></div>
     </nav>
