--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
         .knap3 {
             max-width: 70px;
         }
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 90%
+        }
     </style>
 </head>
 
@@ -168,7 +175,6 @@
         <div class="velkommen">
             <p style="background-image: url(topbillede.jpg)">Velkommen til Alm Brand Bank.<br>Har du også oplevet at skulle akut til tandlægen?<br>Eller måske kun kave et par dage til at betale indskud til lejlighed?<br>Vi kan hjælpe med vejledning inden du binder dig til at lån.<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Inventore aperiam, necessitatibus eligendi qui tempore<br> voluptatum excepturi aspernatur reiciendis aliquid corrupti suscipit<br> velit quia molestias quae molestiae sed eveniet error culpa.</p>
         </div>
-        <div class="menu"></div>
     </nav>
     <main id="indhold">
         <div class="bokse">
@@ -182,7 +188,7 @@
                 </div>
             </div>
             <div class="baggrund1">
-                <img src="1skille.jpg" alt="skille">
+                <img src="1skille.jpg" alt="skille" class="center">
             </div>
             <div class="boks boks2">
                 <h1 class="boksheader"></h1>
@@ -195,7 +201,7 @@
             </div>
         </div>
         <div class="baggrund2">
-            <img src="socialemedier.png" alt="skille">
+            <img src="socialemedier.png" alt="skille" class="center">
         </div>
         <div class="boks boks3">
             <h1 class="boksheader"></h1>
@@ -208,7 +214,7 @@
             </div>
         </div>
         <div class="baggrund1">
-            <img src="2skille.jpg" alt="skille">
+            <img src="2skille.jpg" alt="skille" class="center">
         </div>
         <div class="boks boks4">
             <h1 class="boksheader"></h1>
