mini exolainer lagt ind

--- a/video.html
+++ b/video.html
@@ -85,7 +85,7 @@
         <div class="boks3">
             <div class="mini_explainer">
                 <p>Mini explainer</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/usMK6ggxyRo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6fP-fCLVCz4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
     </main>
